# gitdiagram

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  PUSH_GUIDE.md  README.en.md  README.ko.md  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  project_snapshot.txt  railway.json  renovate.json  repos_to_update.txt  setup-github-pat.sh  tailwind.config.ts  tsconfig.json  vitest.config.ts  weekly_diagram_updater.py
.github/: FUNDING.yml  dependabot.yml
animation-plans/: 001-responsive-control-motion.md  002-mobile-menu-transition.md  003-tooltip-dialog-motion.md  004-legible-state-motion.md  README.md
backend/: Dockerfile  deploy.sh  entrypoint.sh  package.json  project_snapshot.txt  pyproject.toml  requirements.txt
backend/app/: main.py  prompts.py
backend/app/core/: errors.py  observability.py
backend/app/routers/: generate.py  modify.py  readme_update_router.py
backend/app/services/: base_service.py  complimentary_gate.py  cost_estimator.py  diagram_state_repository.py  gemini_service.py  generation_policy.py  github_service.py  gpt_5_mini_openai_service.py  graph_service.py  local_service.py  mermaid_service.py  model_config.py  o3_mini_azure_openai_service.py  openai_service.py  pricing.py  seed_dpsk_service.py
backend/app/utils/: diagram_generator_util.py  format_message.py  mermaid_validator.py  readme_updater.py
backend/cli/: __init__.py  generate.py  local_git.py
backend/nginx/: api.conf
backend/tests/: test_complimentary_gate.py  test_cost_estimator.py  test_generate_router.py  test_generate_utils.py  test_model_config.py  test_openai_service.py  test_pricing.py
docs/: deployment-failover.md  (+3 more)
(+229 files in other folders)
