[project]
name = "gitdiagram-backend"
version = "0.1.0"
description = "FastAPI backend for GitDiagram"
requires-python = ">=3.12,<3.13"
dependencies = [
  "api-analytics==1.2.7",
  "boto3==1.42.83",
  "fastapi==0.135.3",
  "openai==2.30.0",
  "pyjwt[crypto]==2.12.1",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
  "uvicorn[standard]==0.44.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
