[project]
name = "gitdiagram-backend"
version = "0.1.0"
description = "FastAPI backend for GitDiagram"
requires-python = ">=3.14,<3.15"
dependencies = [
  "api-analytics==1.2.7",
  "boto3==1.42.90",
  "fastapi==0.136.0",
  "openai==2.32.0",
  "pyjwt[crypto]==2.12.1",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
  "uvicorn[standard]==0.44.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
