[project]
name = "gitdiagram-backend"
version = "0.1.0"
description = "FastAPI backend for GitDiagram"
requires-python = ">=3.14,<3.15"
dependencies = [
  "api-analytics==1.2.7",
  "boto3==1.43.33",
  "fastapi==0.137.2",
  "openai==2.43.0",
  "pyjwt[crypto]==2.13.0",
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
